ros2_ws/log/build_2023-10-24_15-36-44/mi_paquete_python/stdout_stderr.log
running develop
Removing /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi-paquete-python.egg-link (link to .)
running egg_info
writing ../../build/mi_paquete_python/mi_paquete_python.egg-info/PKG-INFO
writing dependency_links to ../../build/mi_paquete_python/mi_paquete_python.egg-info/dependency_links.txt
writing entry points to ../../build/mi_paquete_python/mi_paquete_python.egg-info/entry_points.txt
writing requirements to ../../build/mi_paquete_python/mi_paquete_python.egg-info/requires.txt
writing top-level names to ../../build/mi_paquete_python/mi_paquete_python.egg-info/top_level.txt
reading manifest file '../../build/mi_paquete_python/mi_paquete_python.egg-info/SOURCES.txt'
writing manifest file '../../build/mi_paquete_python/mi_paquete_python.egg-info/SOURCES.txt'
running build
running build_py
copying mi_paquete_python/move_turtle.py -> /home/simon/Documents/ARO/ros2_ws/build/mi_paquete_python/build/lib/mi_paquete_python
running install
running install_lib
creating /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python
copying /home/simon/Documents/ARO/ros2_ws/build/mi_paquete_python/build/lib/mi_paquete_python/move_leonardo.py -> /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python
copying /home/simon/Documents/ARO/ros2_ws/build/mi_paquete_python/build/lib/mi_paquete_python/__init__.py -> /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python
copying /home/simon/Documents/ARO/ros2_ws/build/mi_paquete_python/build/lib/mi_paquete_python/robot_news_station.py -> /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python
copying /home/simon/Documents/ARO/ros2_ws/build/mi_paquete_python/build/lib/mi_paquete_python/smartphone.py -> /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python
copying /home/simon/Documents/ARO/ros2_ws/build/mi_paquete_python/build/lib/mi_paquete_python/move_turtle.py -> /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python
copying /home/simon/Documents/ARO/ros2_ws/build/mi_paquete_python/build/lib/mi_paquete_python/turtle_controller.py -> /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python
copying /home/simon/Documents/ARO/ros2_ws/build/mi_paquete_python/build/lib/mi_paquete_python/position_logger.py -> /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python
copying /home/simon/Documents/ARO/ros2_ws/build/mi_paquete_python/build/lib/mi_paquete_python/move_raphael.py -> /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python
copying /home/simon/Documents/ARO/ros2_ws/build/mi_paquete_python/build/lib/mi_paquete_python/move_donatello.py -> /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python
copying /home/simon/Documents/ARO/ros2_ws/build/mi_paquete_python/build/lib/mi_paquete_python/move_michelangelo.py -> /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python
byte-compiling /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python/move_leonardo.py to move_leonardo.cpython-310.pyc
byte-compiling /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python/robot_news_station.py to robot_news_station.cpython-310.pyc
byte-compiling /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python/smartphone.py to smartphone.cpython-310.pyc
byte-compiling /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python/move_turtle.py to move_turtle.cpython-310.pyc
  File "/home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python/move_turtle.py", line 12
    self.srv = self.create_service(StringService, 'string_service', self.move_turtle_callback)รง
                                                                                              ^^
SyntaxError: invalid syntax

byte-compiling /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python/turtle_controller.py to turtle_controller.cpython-310.pyc
byte-compiling /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python/position_logger.py to position_logger.cpython-310.pyc
byte-compiling /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python/move_raphael.py to move_raphael.cpython-310.pyc
byte-compiling /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python/move_donatello.py to move_donatello.cpython-310.pyc
byte-compiling /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python/move_michelangelo.py to move_michelangelo.cpython-310.pyc
running install_data
running install_egg_info
Copying ../../build/mi_paquete_python/mi_paquete_python.egg-info to /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python-0.0.0-py3.10.egg-info
running install_scripts
Installing move_donatello script to /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/mi_paquete_python
Installing move_leonardo script to /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/mi_paquete_python
Installing move_michelangelo script to /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/mi_paquete_python
Installing move_turtle script to /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/mi_paquete_python
Installing position_logger script to /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/mi_paquete_python
Installing robot_news_station script to /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/mi_paquete_python
Installing smartphone script to /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/mi_paquete_python
Installing turtle_controller script to /home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/mi_paquete_python
writing list of installed files to '/home/simon/Documents/ARO/ros2_ws/build/mi_paquete_python/install.log'
